# spatial-casadi

./: .gitignore  CITATION.cff  README.md  ____init_____8py.html  angles_8py.html  annotated.html  classes.html  classspatial__casadi_1_1spatial_1_1Rotation-members.html  classspatial__casadi_1_1spatial_1_1Rotation.html  classspatial__casadi_1_1spatial_1_1Transformation-members.html  classspatial__casadi_1_1spatial_1_1Transformation.html  classspatial__casadi_1_1spatial_1_1Translation-members.html  classspatial__casadi_1_1spatial_1_1Translation.html  dir_6435c52a8b42bf5de9c3c1648cab3c76.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  mainpage_8md.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  namespacespatial__casadi.html  namespacespatial__casadi_1_1angles.html  namespacespatial__casadi_1_1spatial.html  pyproject.toml  setup.py  spatial_8py.html
doc/: Doxyfile  gen_mainpage.py
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  (+4 more)
spatial_casadi/: __init__.py  angles.py  spatial.py
(+5 files in other folders)
