[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial_casadi"
version = "1.1.0"
authors = [
  { name="Christopher E. Mower", email="christopher.mower@kcl.ac.uk" },
]
description = "Spatial transformation library for CasADi Python. "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://cmower.github.io/spatial-casadi/"
"Documentation" = "https://cmower.github.io/spatial-casadi/"
"Bug Tracker" = "https://github.com/cmower/spatial-casadi/issues"
"Source" = "https://github.com/cmower/spatial-casadi"